converted fontfamily/ fixed spacing and sizing issues

--- a/src/app.css
+++ b/src/app.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
-	font-family: 'Lato', sans-serif;
-	src: url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,900;1,100;1,300;1,400&display=swap');
+@layer base {
+	html {
+		font-family: 'Roboto Mono', monospace;
+	}
 }
